# autostuff-moses-smt

./: Makefile.am  README.md  apertium-segment.bash  assert-linecount.bash  build-lm-makeable.sh.in  chipmunks2factors.awk  configure.ac  factors2mstparse.awk  morph-segments-all.pbs.in  morph-segments-all.slurm.in  split-factors.awk  verify-factors.awk
am-shared/: check-oovs.am  check-testset-comms.am  evaluate-meteor.am  evaluate-nistbleu.am  evaluate-oovs.am  evaluate-pwer.am  evaluate-ter.am  paper-evals.am  postprocess-sgml.am  preprocess-apertium-segmenting.am  preprocess-basics.am  preprocess-berkeley-parsing.am  preprocess-chipmunk-segmenting.am  preprocess-europarl.am  preprocess-hfst-segmenting.am  preprocess-hunpos-factorising.am  preprocess-morfessor-segmenting.am  preprocess-mst-parsing.am  preprocess-omorfi-segmenting.am  preprocess-protect-commons.am  preprocess-split.am  preprocess-syntax-binarisation.am  settings-apertium-baseline.am  settings-baseline-evals.am  settings-hfst-baseline.am  settings-morfessor-baseline.am  settings-morfessor-scales.am  settings-moses-baseline-scaling.am  settings-moses-baseline.am  settings-quick-sampling.am  settings-segment-markers.am  settings-truecase-baseline.am  train-hfst.am  train-irstlm.am  train-kenlm.am  train-language-models.am  train-morfessor.am  train-moses-apesegs.am  train-moses-baseline.am  train-moses-factors.am  (+19 more)
fin-eng/: Makefile.am  morph-segments-all.pbs.in  morph-segments-eng-fin.pbs.in  morph-segments-fin-eng.pbs.in  morph-segments-fin-eng.slurm.in  newsdev2015-split-dev.en.text  newsdev2015-split-dev.fi.text  newsdev2015-split-test.en.text  newsdev2015-split-test.fi.text  omorfi-morphs.relabel  omorfi-segments.relabel  story.fi.text  undhr.en.text  undhr.fi.text
fin-lit/: Makefile.am
hbs-eng/: Makefile.am
lit-eng/: Makefile.am
spa-eus/: Makefile.am
