## Process this file with automake to create Makefile.in

## This is Makefile for abumatran SMT morphs compounds stuff
## run make to reproduce.

# let's follow that L1=less morphs L2=more morphs
L1=en
L2=hr
L1_LONG=eng
L2_LONG=hbs
APERTIUM_L1_L2=eng-hbs_HR
APERTIUM_L2_L1=hbs_eng
METEOR_L1_FLAGS=-l en
METEOR_L2_FLAGS=


# common prefixes
BASELINE_CORPUS=setimes.$(L1)-$(L2)
BASELINE_TEST_PREFIX=$(BASELINE_CORPUS).002001-004000
WMT2013_TEST_PREFIX=newstest2013.$(L1)-$(L2)

# Moses baseline as with the wiki page but without europarl
MOSES_BASELINE_PREFIX=$(BASELINE_CORPUS).004001-205910
include $(top_srcdir)/am-shared/settings-moses-baseline.am
include $(top_srcdir)/am-shared/settings-morfessor-baseline.am
include $(top_srcdir)/am-shared/settings-apertium-baseline.am

# Add WMT tests to translations
TRANSLATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(TRANSLATION_L1_L2)
TRANSLATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(TRANSLATION_L2_L1)
if CAN_MORFESS
TRANSLATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(TRANSLATION_L1_L2)
TRANSLATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(TRANSLATION_L2_L1)
endif
if CAN_FLATCAT
TRANSLATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(TRANSLATION_L1_L2)
TRANSLATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(TRANSLATION_L2_L1)
endif
if CAN_APERTIUM
TRANSLATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(TRANSLATION_L1_L2)

TRANSLATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(TRANSLATION_L2_L1)
endif

TRANSLATIONS+=$(TRANSLATIONS_L1_L2) $(TRANSLATIONS_L2_L1)

# evaluations
if CAN_NISTBLEU
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(NISTBLEU_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(NISTBLEU_L2_L1)
if CAN_MORFESS
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(NISTBLEU_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(NISTBLEU_L2_L1)
endif
if CAN_FLATCAT
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(NISTBLEU_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(NISTBLEU_L2_L1)
endif
if CAN_APERTIUM
EVALUATIONS_L1_L2+=
EVALUATIONS_L2_L1+=
endif
endif # NIST bleu

if CAN_TER
# baseline moses
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(TER_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(TER_L2_L1)
if CAN_MORFESS
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(TER_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(TER_L2_L1)
endif
if CAN_FLATCAT
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(TER_L2_L1)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(TER_L2_L1)
endif
if CAN_APERTIUM
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(TER_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(TER_L2_L1)
endif
endif # TER

if CAN_METEOR
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(METEOR_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(METEOR_L2_L1)
if CAN_MORFESS
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(METEOR_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(METEOR_L2_L1)
endif
if CAN_FLATCAT
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(METEOR_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(METEOR_L2_L1)
endif
if CAN_APERTIUM
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(METEOR_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(METEOR_L2_L1)
endif
endif # METEOR

EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(OOV_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).$(OOV_L2_L1)
if CAN_MORFESS
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(OOV_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).$(OOV_L2_L1)
endif
if CAN_FLATCAT
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(OOV_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).$(OOV_L2_L1)
endif
if CAN_APERTIUM
EVALUATIONS_L1_L2+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(OOV_L1_L2)
EVALUATIONS_L2_L1+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).$(OOV_L2_L1)
endif


# convenience variables
EVALUATIONS+=$(EVALUATIONS_L2_L1) $(EVALUATIONS_L1_L2)

# turn stuff into things for article
if CAN_TER
if CAN_METEOR
if CAN_NISTBLEU
EVALUATIONS+=$(WMT2013_TEST_PREFIX).$(MOSES_BASELINE_INFIX).rows
if CAN_MORFESS
EVALUATIONS+=$(WMT2013_TEST_PREFIX).$(MORFESSOR_BASELINE_INFIX).rows
endif
if CAN_FLATCAT
EVALUATIONS+=$(WMT2013_TEST_PREFIX).$(FLATCAT_BASELINE_INFIX).rows
endif
if CAN_APERTIUM
EVALUATIONS+=$(WMT2013_TEST_PREFIX).$(APERTIUM_BASELINE_INFIX).rows
endif
endif # Nistbleu
endif # Meteor
endif # Ter

PAPER=
if CAN_LATEX
PAPER+=
endif

# }}}


# {{{ Corpora fetching

# no automatic fetching

include $(top_srcdir)/am-shared/preprocess-morfessor-segmenting.am
include $(top_srcdir)/am-shared/preprocess-split.am

# }}}

include $(top_srcdir)/am-shared/train-language-models.am
include $(top_srcdir)/am-shared/train-moses-baseline.am

include $(top_srcdir)/am-shared/translate-moses-baseline.am
include $(top_srcdir)/am-shared/translate-apertium-baseline.am
include $(top_srcdir)/am-shared/translate-morfessor-baseline.am
include $(top_srcdir)/am-shared/translate-morfessor-uncommons.am
include $(top_srcdir)/am-shared/translate-morfessor-lattices.am


include $(top_srcdir)/am-shared/evaluate-oovs.am
include $(top_srcdir)/am-shared/postprocess-sgml.am
include $(top_srcdir)/am-shared/evaluate-nistbleu.am
include $(top_srcdir)/am-shared/evaluate-ter.am
include $(top_srcdir)/am-shared/evaluate-meteor.am






include $(top_srcdir)/am-shared/paper-evals.am


# vim: set foldmethod=marker:
